tests/syntax_errors/attrs_broken.out
error: attrs_broken.li 1,6: unexpected token `
`, expecting `r_bracket`
    1 | #[abc
      |      ^
error: attrs_broken.li 2,6: unexpected token `}`
    2 | f() {}
      |      ^
